--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -1,26 +1,12 @@
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600");
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif; }
-
-.App {
-  text-align: center; }
+  font-family: 'Source Sans Pro', sans-serif; }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px; }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white; }
-
-.App-title {
-  font-size: 1.5em; }
-
-.App-intro {
-  font-size: large; }
 
 @keyframes App-logo-spin {
   from {
