--- a/src/stylesheets/_colors.scss
+++ b/src/stylesheets/_colors.scss
@@ -4,3 +4,4 @@ $primary-color-darken: #25bbf1 !default;
 $gray: #a3a3a3 !default;
 $gray-light: #ededed !default;
 $gray-darken: #616161;
+$gray-divider: #d9d9d9;
