--- a/src/stylesheets/_breakpoints.scss
+++ b/src/stylesheets/_breakpoints.scss
@@ -1,3 +1,4 @@
 $breakpoint-phone: 640px !default;
 $breakpoint-tablet: 768px !default;
+$breakpoint-medium: 960px !default;
 $breakpoint-desktop: 1024px !default;
