--- a/src/stylesheets/_colors.scss
+++ b/src/stylesheets/_colors.scss
@@ -1,7 +1,11 @@
 $primary-color: #0ad4fa !default;
 $primary-color-darken: #25bbf1 !default;
 
+$error-color: #FB0106 !default;
+$error-color-darken: #a70805 !default;
+
 $gray: #a3a3a3 !default;
 $gray-light: #ededed !default;
 $gray-darken: #616161;
 $gray-divider: #d9d9d9;
+$gray-background: #f9f9f9;
