--- a/src/stylesheets/product.scss
+++ b/src/stylesheets/product.scss
@@ -1,15 +1,27 @@
+@import "flex";
 @import "colors";
 
 .product {
+  z-index: 1;
   position: relative;
-  height: 276px;
-  width: 276px;
+  top: 0px;
+  height: 100%;
+  width: 100%;
   background-color: #ffffff;
   box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.1);
+  transition: 0.3s ease;
+
+  &:hover {
+    top: -10px;
+
+    .product-overlay {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
 
   &-photo {
-    width: 252px;
-    height: 182px;
+    text-align: center;
     padding: 10px;
   }
 
@@ -17,14 +29,112 @@
     position: absolute;
     top: 12px;
     right: 12px;
+
+    img {
+      height: 42px;
+      width: 42px;
+    }
+
+    button {
+      &:hover {
+        animation: buy-half-spin 1 0.6s ease;
+      }
+    }
   }
 
   &-info {
     margin: 0 24px;
     border-top: 1px solid $gray-divider;
+
+    &-category {
+      font-size: 16px;
+      letter-spacing: -0.04px;
+      color: $gray;
+      margin: 18px 0 0 0;
+    }
+
+    &-name {
+      font-size: 18px;
+      letter-spacing: -0.04px;
+      color: $gray-darken;
+      margin: 1px 0 17px 0;
+    }
   }
 
-  &-hover {
-    display: none;
+  &-points-needed {
+    @include flex(row, center);
+    position: absolute;
+    right: 0;
+    margin: 12px;
+    padding: 8px 15px;
+    display: inline-block;
+    border-radius: 100px;
+    background-color: rgba(red($gray-darken), green($gray-darken), blue($gray-darken), 0.8);
+    color: #ffffff;
+    font-size: 14px;
+    letter-spacing: -0.03px;
+
+    img {
+      vertical-align: middle;
+    }
   }
+
+  &-overlay {
+    @include flex(column, center);
+    z-index: 0;
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: 0.3s ease;
+
+    &-background {
+      z-index: -1;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-image: linear-gradient(-180deg, $primary-color 0%, $primary-color-darken 100%);
+      opacity: 0.9;
+    }
+
+    &-info {
+      padding: 24px;
+
+      &-points {
+        font-size: 36px;
+        color: #ffffff;
+        letter-spacing: -0.08px;
+        margin: 10px 0 11px 0;
+        text-align: center;
+        font-weight: 200;
+
+        img {
+          vertical-align: middle;
+        }
+      }
+
+      button {
+        width: 100%;
+        font-size: 18px;
+        text-align: center;
+        height: 42px;
+        line-height: 42px;
+      }
+    }
+  }
+}
+
+@keyframes buy-half-spin {
+  0% { transform: rotate(0deg); }
+  15% { transform: rotate(15deg); }
+  30% { transform: rotate(0deg); }
+  45% { transform: rotate(-15deg) }
+  60% { transform: rotate(0deg) }
+  75% { transform: rotate(10deg) }
+  90% { transform: rotate(0deg) }
+  95% { transform: rotate(-5deg) }
+  100% { transform: rotate(0deg) }
 }
