--- a/src/stylesheets/product.scss
+++ b/src/stylesheets/product.scss
@@ -23,6 +23,15 @@
   &-photo {
     text-align: center;
     padding: 10px;
+    min-height: 185px;
+    min-width: 255px;
+
+    &--loading {
+      background: url('../images/aerolab-logo.svg') no-repeat center center;
+      background-size: 48px;
+      opacity: 0.2;
+      animation: smooth-shake infinite 1.5s linear;
+    }
   }
 
   &-buy {
@@ -37,7 +46,7 @@
 
     button {
       &:hover {
-        animation: buy-half-spin 1 0.6s ease;
+        animation: smooth-shake 1 0.6s ease;
       }
     }
   }
@@ -110,6 +119,7 @@
         margin: 10px 0 11px 0;
         text-align: center;
         font-weight: 200;
+        cursor: default;
 
         img {
           vertical-align: middle;
@@ -127,7 +137,7 @@
   }
 }
 
-@keyframes buy-half-spin {
+@keyframes smooth-shake {
   0% { transform: rotate(0deg); }
   15% { transform: rotate(15deg); }
   30% { transform: rotate(0deg); }
