--- a/src/stylesheets/filters.scss
+++ b/src/stylesheets/filters.scss
@@ -3,7 +3,7 @@
 
 .filters {
   @include flex(row, space-between);
-  margin-top: 65px;
+  padding-top: 65px;
   padding-bottom: 24px;
   border-bottom: 1px solid $gray-divider;
 
