--- a/src/stylesheets/header.scss
+++ b/src/stylesheets/header.scss
@@ -1,6 +1,7 @@
 @import "breakpoints";
 @import "colors";
 @import "flex";
+@import "variables";
 
 .header {
   &-info {
@@ -71,8 +72,6 @@
 
     &-title {
       position: absolute;
-      margin: 0;
-      left: 132px;
       bottom: 48px;
       font-size: 64px;
       color: #ffffff;
