--- a/src/stylesheets/products.scss
+++ b/src/stylesheets/products.scss
@@ -2,7 +2,7 @@
 @import "variables";
 
 .products {
-  margin: 41px 0;
+  margin: 41px 0 0 0;
   display: grid;
   grid-template-columns: auto auto auto auto;
   grid-column-gap: 24px;
