[HISTORY] Added a dropdown for user redeem history

--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -1,1 +1,4 @@
 $container-size: 1176px;
+$header-info-padding-top-bottom: 16px;
+$header-info-padding-right-left: 40px;
+$header-info-height: 48px;
