[HEADER] Adding a proper color to background banner (before image is loaded)

--- a/src/stylesheets/_colors.scss
+++ b/src/stylesheets/_colors.scss
@@ -1,6 +1,8 @@
 $primary-color: #0ad4fa !default;
 $primary-color-darken: #25bbf1 !default;
 
+$banner-color: #60E3FE;
+
 $error-color: #FB0106 !default;
 $error-color-darken: #a70805 !default;
 
