--- a/src/stylesheets/header.scss
+++ b/src/stylesheets/header.scss
@@ -56,7 +56,7 @@
 
   &-banner {
     position: relative;
-    background-color: #000000;
+    background-color: $banner-color;
     width: 100%;
     height: 412px;
 
